--- a/.github/workflows/triggers.yml
+++ b/.github/workflows/triggers.yml
@@ -1,4 +1,5 @@
 name : Triggers Configurando los binarios
+run-name: Configurando Triggers o iniciadores para las acciones
 on :
     push :
         branches: 
@@ -30,7 +31,7 @@ jobs :
     trigger-entorno :
         runs-on : ubuntu-latest
     other-trigger : 
-        if : ${{github.event_name != 'workflow_dispatch'}} # Validación que limita la ejecución de este job para cuando el workflow se ejecute de forma manual (workflow_dispatch)
+        # if : ${{github.event_name != 'workflow_dispatch'}} # Validación que limita la ejecución de este job para cuando el workflow se ejecute de forma manual (workflow_dispatch)
         runs-on : ubuntu-latest
         steps:
             - name : Checkout
