Aprendiendo a usar el workflow_dispatch

--- a/.github/workflows/triggers.yml
+++ b/.github/workflows/triggers.yml
@@ -29,16 +29,13 @@ on :
         - cron: '47 6,18 * * 1'
 jobs :
     other-trigger : 
-        # if : ${{github.event_name != 'workflow_dispatch'}} # Validación que limita la ejecución de este job para cuando el workflow se ejecute de forma manual (workflow_dispatch)
+         #if : ${{github.event_name != 'workflow_dispatch'}} # Validación que limita la ejecución de este job para cuando el workflow se ejecute de forma manual (workflow_dispatch)
+        # if : ${{ github.event.inputs.lenguaje_favorito == "Python" }}
         runs-on : ubuntu-latest
         steps:
             - name : Checkout
               uses : actions/checkout@v3
-            - name : Configurando Node
-              uses : actions/setup-node@v3
-              with :
-                node-version: '18'
-            - name : Ejecutando el código
-              run : node hola.js
+            - name : Mostrar Seleccion
+              run : echo ${{github.event.inputs.lenguaje_favorito }}   
         
                                      
