--- a/.github/workflows/triggers.yml
+++ b/.github/workflows/triggers.yml
@@ -40,7 +40,7 @@ jobs :
         runs-on : ubuntu-latest
         steps : 
             - name : Validacion de datos
-              if :  inputs.nombre == 'Hugo'
+              if :  inputs.nombre != 'Bremdow'
               run : echo "Te gusta programar en otro lenguaje de programación"
     other-trigger : 
             #if : ${{github.event_name != 'workflow_dispatch'}} # Validación que limita la ejecución de este job para cuando el workflow se ejecute de forma manual (workflow_dispatch)
